--- a/MEAN/structure/package.json
+++ b/MEAN/structure/package.json
@@ -9,6 +9,6 @@
     "express-session": "~1.7.6",
     "method-override": ">=2.3.10",
     "mongoose": "^4.1.12",
-    "morgan": "~1.3.0"
+    "morgan": ">=1.9.1"
   }
 }
